@startuml
skinparam nodesep 100
skinparam ranksep 150
skinparam defaultFontSize 18

skinparam linetype ortho

hide circle
hide empty members
!theme blueprint

entity system_info {
    system_id <<PK>>
    db_version
    current_plot_version
    last_update
    description
}

entity build_team {
    build_team_id <<PK>>
    name
    api_key
    api_create_date
}

entity server {
    build_team_id <<PK>>
    server_name <<FK>>
}

entity country {
    country_code <<PK>>
    continent
    material
    custom_model_data
}

entity city_project {
    city_project_id <<PK>>
    build_team_id <<FK>>
    country_code <<FK>>
    server_name <<FK>>
    is_visible
}

entity builder {
    uuid <<PK>>
    name
    score
    first_slot
    second_slot
    third_slot
    plot_type
}

entity plot_difficulty {
    difficulty_id <<PK>>
    multiplier
    score_requirement
}

entity plot {
    plot_id <<PK>>
    city_project_id <<FK>>
    difficulty_id <<FK>>
    owner_uuid <<FK>>
    status
    outline_bounds
    initial_schematic
    complete_schematic
    last_activity_date
    is_pasted
    mc_version
    plot_version
    plot_type
    created_by
    create_date
}

entity tutorial {
    tutorial_id <<PK>>
    uuid <<PK>>
    stage_id
    is_complete
    first_stage_start_date
    last_stage_complete_date
}

entity plot_review {
    review_id <<PK>>
    plot_id <<FK>>
    rating
    score
    feedback
    reviewed_by
    review_date
}

entity review_toggle_criteria {
    criteria_name <<CK>>
    is_optional
}

entity build_team_has_reviewer {
    build_team_id <<PK>>
    uuid <<PK>>
}

entity builder_has_review_notification {
    review_id <<PK>>
    uuid <<PK>>
}

entity builder_is_plot_member {
    plot_id <<PK>>
    uuid <<PK>>
}

entity "build_team_uses_toggle_criteria" {
    criteria_name <<PK>>
    build_team_id <<PK>>
}

entity "review_contains_toggle_criteria" {
    review_id <<PK>>
    criteria_name <<PK>>
    is_checked
}

build_team "1" <-- "0..*" build_team_has_reviewer
build_team "1" <-- "0..*" server
build_team "1" <-- "0..*" city_project

country "1" <--- "0..*" city_project

city_project "0..*" --> "1" server

plot_review "1" <-- "0..*" builder_has_review_notification
plot_review "0..*" --> "1" plot

builder "1" <-- "0..*" build_team_has_reviewer
builder "1" <--- "1" tutorial
builder "1" <--- "0..*" builder_has_review_notification
builder "1" <-- "0..*" builder_is_plot_member

plot "0..*" --> "1" city_project
plot "0..*" ---> "1" plot_difficulty
plot "1" <-- "0..*" builder_is_plot_member

review_toggle_criteria "1" <-- "0..*" build_team_uses_toggle_criteria
build_team_uses_toggle_criteria "0..*" -> "1" build_team
review_toggle_criteria "1" <-- "0..*" review_contains_toggle_criteria
review_contains_toggle_criteria "0..*" --> "1" plot_review
@enduml